# AdAstrisEngine

./: #test.cpp#  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  build_cmake.py  cmake_install.cmake  compile.py  compile_commands.json
engine/devtools/project_launcher/: CMakeLists.txt  api.h  create_new_game_browser.cpp  create_new_game_browser.h  menu.cpp  menu.h  module.cpp  project_launcher.cpp  project_launcher.h  recent_projects_browser.cpp  recent_projects_browser.h  ui_manager.cpp  ui_manager.h  utils.cpp  utils.h
engine/editor/: CMakeLists.txt  api.h  common.h  content_browser_window.cpp  content_browser_window.h  editor.cpp  editor.h  interfaces.h  material_creation_window.cpp  material_creation_window.h  model_creation_window.cpp  model_creation_window.h  module.cpp  outliner_window.cpp  outliner_window.h  properties_window.cpp  properties_window.h  viewport_window.cpp  viewport_window.h
engine/plugins/ecs/: CMakeLists.txt  ecs.h
engine/src/: CMakeLists.txt  cmake_install.cmake  flags_operations.h  main.cpp
engine/src/application/: ad_astris_engine.cpp  ad_astris_engine.h  editor_module.h  project_launcher_module.h
engine/src/application_core/: common.h  editor_events.h  enums.h  sdl_window.cpp  sdl_window.h  win_api_raw_input_parser.cpp  win_api_raw_input_parser.h  win_api_utils.cpp  win_api_utils.h  win_api_window.cpp  win_api_window.h  window.h  window_events.cpp  window_events.h  window_events_impl.h
engine/src/core/: DAG.cpp  DAG.h  array_view.h  attributes.h  common.h  compile_time_hash.h  config_base.cpp  config_base.h  constants.h  custom_objects_to_json.h  flags_operations.h  glm_to_json.h  global_objects.cpp  global_objects.h  lib_implementation.cpp  linear_allocator.h  macros_utils.h  math_base.h  memory_utils.cpp  memory_utils.h  module.h  module_manager.cpp  module_manager.h  non_copyable_non_movable.h  object_pool.h  os_resource.h  platform.h  platform_process.cpp  platform_process.h  platform_resource.h  pool_allocator.h  rect_packer.h  reflection.h  reflector.h  serialization.h  stack_allocator.h  template_utils.h  timer.h  tuple.h  utility_implementation.cpp  (+2 more)
engine/src/ecs/: archetype.cpp  archetype.h  archetype_types.h  attributes.h  ecs.h  entity_filter.h  entity_manager.cpp  entity_manager.h  entity_query.cpp  entity_query.h  entity_types.cpp  entity_types.h  execution_context.cpp  execution_context.h  serializers.cpp  serializers.h  system.h  system_manager.cpp  system_manager.h  type_info_table.cpp  type_info_table.h
engine/src/engine/: CMakeLists.txt  engine.h  engine_module.h  engine_settings.cpp  engine_settings.h  render_core_module.h  renderer_module.h  vulkan_rhi_module.h
engine/src/engine_core/: base_settings.cpp  base_settings.h  basic_components.h  basic_components.h~  basic_events.h  contexts.h  default_object_creators.cpp  default_object_creators.h  engine_actors.h  engine_object_events.h  engine_objects_creator.cpp  engine_objects_creator.h  enums.h  fwd.h  object.cpp  object.h  object_name.cpp  object_name.h  subsettings.h  uuid.cpp  world.cpp  world.h
engine/src/events/: event.h  event_handler.h  event_manager.cpp  event_manager.h
engine/src/file_system/: IO.cpp  IO.h  file.cpp  file.h  file_system.h  utils.cpp  utils.h
engine/src/material_system/: material_system.cpp  shader.cpp  shader.h
engine/src/multithreading/: task_composer.cpp  task_composer.h  task_types.h
engine/src/profiler/: frame_stats.cpp  frame_stats.h  frame_stats_manager.cpp  frame_stats_manager.h  logger.h  profiler.h  profiler_instance.cpp  profiler_instance.h  (+5 more)
src/: #vk_engine.h#  .#vk_engine.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  engine_actors.h  main.cpp  material_system.cpp  material_system.h  ui.cpp  user_interface.cpp  user_interface.h  vk_camera.cpp  vk_camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderpass.cpp  vk_renderpass.h  vk_scene.cpp  vk_scene.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.cpp  vk_types.h
src/application_core/: sdl_window.cpp  sdl_window.h
src/engine/: camera.cpp  engine.h  engine_actors.h
src/engine_core/: camera.cpp  level.cpp  level.h  material.h  model.cpp  model.h  object.cpp  object.h  object_name.cpp  object_name.h  uuid.cpp  uuid.h
src/file_system/: IO.cpp  IO.h  file.cpp  file.h  file_system.h  utils.cpp  utils.h
src/material_system/: material_system.cpp  material_system.h  shader.cpp  shader.h
src/render_core/: material_system.cpp  material_system.h  shader_cache.cpp  shader_compiler.cpp  shader_compiler.h
src/renderer/: renderer.h  renderer_resources.h  scene_manager.cpp
src/resource_manager/: resource_converter.cpp  resource_converter.h  resource_formats.h  resource_manager.cpp  resource_manager.h  utils.cpp  utils.h
src/rhi/: engine_rhi.h  resources.h
src/ui/: actors_properties_ui.cpp  actors_properties_ui.h  docking_window.cpp  docking_window.h  interfaces.h  proj_settings_window.cpp  proj_settings_window.h  properties_window.cpp  properties_window.h  user_interface.cpp  user_interface.h
src/vulkan_renderer/: vk_descriptors.cpp  vk_descriptors.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_renderer2.cpp  vk_renderpass.cpp  vk_renderpass.h  vk_scene.cpp  vk_scene.h  vk_textures.cpp  vk_textures.h  vk_types.cpp  vk_types.h
src/vulkan_rhi/: device.cpp  device.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_manager.cpp  vulkan_command_manager.h  vulkan_common.cpp  vulkan_common.h  vulkan_descriptor_manager.cpp  vulkan_descriptor_manager.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_queue.cpp  vulkan_queue.h  vulkan_render_pass.cpp  vulkan_rhi.cpp  vulkan_rhi.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h  vulkan_texture.cpp  vulkan_texture.h
(+660 files in other folders)
