# CMakeList.txt : CMake project for AdAstrisEngine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_COMPILER C:/msys64/mingw64/bin/g++.exe)
set(DIR_THIRD_PARTY ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
set(DIR_BIN ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(DIR_ENGINE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/engine/src)
set(DIR_DEVTOOLS ${CMAKE_CURRENT_SOURCE_DIR}/engine/devtools)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DIR_BIN})
set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--export-all-symbols")

project ("AdAstrisEngine")

set(CMAKE_CXX_STANDARD 17)

find_package(Vulkan REQUIRED)

option(BUILD_THIRD_PARTY "Build third party libs" OFF)
option(BUILD_ENGINE_CORE "Build engine core" OFF)
option(BUILD_VULKAN_RHI "Build VulkanRHI module" OFF)
option(BUILD_RENDER_CORE "Build RenderCore module" OFF)
option(BUILD_RENDERER "Build Renderer module" OFF)
option(BUILD_PROJECT_LAUNCHER "Build ProjectLauncher module" OFF)
option(BUILD_LOW_LEVEL_ENGINE "Build low level engine" OFF)
option(BUILD_TESTS "Build tests" OFF)

if (BUILD_THIRD_PARTY)
    add_subdirectory(third_party)
endif()
if (BUILD_ENGINE_CORE)
    add_subdirectory(engine/src)
endif()
if (BUILD_VULKAN_RHI)
    add_subdirectory(engine/src/vulkan_rhi)
endif()
if (BUILD_RENDER_CORE)
    add_subdirectory(engine/src/render_core)
endif()
if (BUILD_RENDERER)
    add_subdirectory(engine/src/renderer)
endif()
if (BUILD_PROJECT_LAUNCHER)
    add_subdirectory(engine/devtools/project_launcher)
endif()
if (BUILD_LOW_LEVEL_ENGINE)
    add_subdirectory(engine/src/engine/engine_module)
endif()
if (BUILD_TESTS)
    add_subdirectory(engine/src/tests)
endif()

find_program(GLSL_VALIDATOR glslangValidator HINTS /usr/bin /usr/local/bin ${DIR_THIRD_PARTY}/vulkan_base/glslang)
include_directories(${DIR_THIRD_PARTY})
include_directories(${DIR_THIRD_PARTY}/json)
include_directories(${DIR_ENGINE_SRC})
