# CMakeList.txt : CMake project for AdAstrisEngine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

set(DIR_THIRD_PARTY ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
set(DIR_BIN ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(DIR_ENGINE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/engine/src)
set(DIR_DEVTOOLS ${CMAKE_CURRENT_SOURCE_DIR}/engine/devtools)
set(DIR_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DIR_BIN})

project ("AdAstrisEngine")

set(CMAKE_CXX_STANDARD 17)

option(BUILD_THIRD_PARTY "Build third party libs" OFF)
option(BUILD_ENGINE_CORE "Build engine core" OFF)
option(BUILD_VULKAN_RHI "Build VulkanRHI module" OFF)
option(BUILD_RENDER_CORE "Build RenderCore module" OFF)
option(BUILD_RENDERER "Build Renderer module" OFF)
option(BUILD_PROJECT_LAUNCHER "Build ProjectLauncher module" OFF)
option(BUILD_LOW_LEVEL_ENGINE "Build low level engine" OFF)
option(BUILD_RESOURCE_MANAGER "Build resource manager" OFF)
option(BUILD_TESTS "Build tests" OFF)
option(BUILD_EDTIOR "Build editor" OFF)
option(GLSL_SUPPORT "GLSL support" OFF)

if (MSVC)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DIR_BIN})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DIR_BIN})
endif()

add_subdirectory(${DIR_ROOT}/engine/shaders)

if (BUILD_THIRD_PARTY)
    message(STATUS "Build third party")
    add_subdirectory(third_party)
endif()
if (BUILD_ENGINE_CORE)
    message(STATUS "Build engine core")
    add_subdirectory(engine/src)
endif()
if (BUILD_VULKAN_RHI)
    message(STATUS "Build vulkan rhi")
    add_subdirectory(engine/src/vulkan_rhi)
endif()
if (BUILD_RENDER_CORE)
    message(STATUS "Build render core")
    add_subdirectory(engine/src/render_core)
endif()
if (BUILD_RENDERER)
    message(STATUS "Build renderer")
    add_subdirectory(engine/src/renderer)
endif()
if (BUILD_PROJECT_LAUNCHER)
    message(STATUS "Build project launcher")
    add_subdirectory(engine/devtools/project_launcher)
endif()
if (BUILD_LOW_LEVEL_ENGINE)
    message(STATUS "Build low level engine")
    add_subdirectory(engine/src/engine)
endif()
if (BUILD_RESOURCE_MANAGER)
    message(STATUS "Build resource manager")
    add_subdirectory(engine/src/resource_manager/module)
endif()
if (BUILD_EDTIOR)
    message(STATUS "Build editor")
    add_subdirectory(engine/editor)
endif()
if (BUILD_TESTS)
    message(STATUS "Build tests")
    add_subdirectory(engine/src/tests)
endif()

include_directories(${DIR_THIRD_PARTY})
include_directories(${DIR_THIRD_PARTY}/json)
include_directories(${DIR_ENGINE_SRC})
include_directories(${DIR_ROOT}/engine)
